--- a/src/view/Ad/adDetails.css
+++ b/src/view/Ad/adDetails.css
@@ -1,86 +1,78 @@
-.mainAd{
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 90vh;
-    font-family: sans-serif;
-
-
-}   
-
-
-
-.Ad{
-
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap:2vh;
-    background: #d62451;
-    box-shadow: 5px 5px #feffc3;
-    border-radius: 10px;
-    width: 20vw;
-    height: fit-content;
-    margin-left: auto;
-    margin-right: auto;
-    color: #FFF;
-    padding: 5vh;
-    
+.mainAd {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 90vh;
+  font-family: sans-serif;
 }
 
-.titleAd{
-    text-transform: uppercase;
-    font-weight: 800;
-    
+.Ad {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2vh;
+  background: #d62451;
+  box-shadow: 5px 5px #feffc3;
+  border-radius: 10px;
+  width: 20vw;
+  height: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  color: #fff;
+  padding: 5vh;
 }
 
-.photoAd{
-    width: 10vw;
-    border-radius: 10px;
+.titleAd {
+  text-transform: uppercase;
+  font-weight: 800;
 }
 
-.buttonAdDetails{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #FFF;
-    color: #d62451;
-    padding: 1vh;
-    margin: 1vh;
-    cursor: pointer;
-    height: 5vh;
-    border-radius: 10px;
-    text-transform: uppercase;
-    font-weight: 600;
+.photoAd {
+  width: 10vw;
+  border-radius: 10px;
 }
 
-.buttonAdDetails:hover{
-    background-color:#04045ac9;
-    color: #FFF;
+.buttonAdDetails {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  color: #d62451;
+  padding: 1vh;
+  margin: 1vh;
+  cursor: pointer;
+  height: 5vh;
+  border-radius: 10px;
+  text-transform: uppercase;
+  font-weight: 600;
 }
 
-.seller{
-    background-color: #000000;
-    padding: 1vh;
-    border-radius: 10px;
-    font-weight: 400;
+.buttonAdDetails:hover {
+  background-color: #04045ac9;
+  color: #fff;
 }
 
-.titleAd{
-    text-transform: uppercase;
-    background-color: #000000;
-    padding: 1vh;   
-    border-radius: 10px;
-    font-weight: 700;
+.seller {
+  background-color: #000000;
+  padding: 1vh;
+  border-radius: 10px;
+  font-weight: 400;
 }
 
-.priceAd{
-    font-weight: 600;
-    text-transform: uppercase;
-    margin: 1vh;
-    background-color: #000000;
-    padding: 1vh;
-    border-radius: 10px;
+.titleAd {
+  text-transform: uppercase;
+  background-color: #000000;
+  padding: 1vh;
+  border-radius: 10px;
+  font-weight: 700;
+}
+
+.priceAd {
+  font-weight: 600;
+  text-transform: uppercase;
+  margin: 1vh;
+  background-color: #000000;
+  padding: 1vh;
+  border-radius: 10px;
 }
