--- a/src/components/formRegister/forms.css
+++ b/src/components/formRegister/forms.css
@@ -1,88 +1,85 @@
-.formRegister{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 3vh;
-    background-color: #350b59;
-    padding: 5vh;
-    border-radius: 20px;
-    box-shadow: 5px 5px #feffc3;
-    width: 50vw;
-
+.formRegister {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 3vh;
+  background-color: #350b59;
+  padding: 5vh;
+  border-radius: 20px;
+  box-shadow: 5px 5px #feffc3;
+  width: 50vw;
 }
 
 input::placeholder {
-    font-weight: bold;
-    opacity: 1;
-    color: red;
-  }
-  
+  font-weight: bold;
+  opacity: 1;
+  color: red;
+}
 
-.inputRegister{
-border: none;
-background-color:#fFF;
-min-width: 40vw;
-border-radius: 10px;
-height: 5vh;
-color:#350b59;
-font-weight: 600;
-font-size: 12px;
+.inputRegister {
+  border: none;
+  background-color: #fff;
+  min-width: 40vw;
+  border-radius: 10px;
+  height: 5vh;
+  color: #350b59;
+  font-weight: 600;
+  font-size: 12px;
 }
 
 .custom-file-upload {
-   display: flex;
-   justify-content: center;
-   align-items: center;
-    cursor: pointer;
-    background-color: #feffc3;
-    color: #350b59;
-    border: none;
-    height: 5vh;
-    width: 20vw;
-    font-size: clamp(12px,3vw,20px);;
-    font-weight: 600;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background-color: #feffc3;
+  color: #350b59;
+  border: none;
+  height: 5vh;
+  width: 20vw;
+  font-size: clamp(12px, 3vw, 20px);
+  font-weight: 600;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
 }
 
 .custom-file-upload input[type="file"] {
-    display: none;
+  display: none;
 }
 
 .custom-file-upload:hover {
-    background-color: #ed2657;
-    color: #feffc3;
+  background-color: #ed2657;
+  color: #feffc3;
 }
 
-.submitRegister{
-border: none;
-background-color:#feffc3;
-border-radius: 5px;
-width: 20vw;
-height: 5vh;
-color:#350b59;
-font-weight: 600;
-font-size: clamp(12px,3vw,20px);;
-transition: background-color 0.3s ease;
-cursor: pointer;
+.submitRegister {
+  border: none;
+  background-color: #feffc3;
+  border-radius: 5px;
+  width: 20vw;
+  height: 5vh;
+  color: #350b59;
+  font-weight: 600;
+  font-size: clamp(12px, 3vw, 20px);
+  transition: background-color 0.3s ease;
+  cursor: pointer;
 }
 
-.submitRegister:hover{
-    background-color: #ed2657;
-    color: #feffc3;
+.submitRegister:hover {
+  background-color: #ed2657;
+  color: #feffc3;
 }
 
-.done{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: fit-content;
-    background-color: mediumseagreen;
-    color:#FFf;
-    font-weight: 600;
-    text-transform: uppercase;
-    border-radius: 10px;
-    padding: 1vh;
-
+.done {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+  background-color: mediumseagreen;
+  color: #fff;
+  font-weight: 600;
+  text-transform: uppercase;
+  border-radius: 10px;
+  padding: 1vh;
 }
