--- a/src/components/section/sectionApp.css
+++ b/src/components/section/sectionApp.css
@@ -1,124 +1,125 @@
-.mainSection{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-    min-height: 60vh;
-    background-color: #350b59;
+.mainSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  min-height: 60vh;
+  background-color: #350b59;
 }
 
-.blocSection{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-width: 90vw;
-    min-height:60vh;
-    background: rgb(237,38,87);
-    background: linear-gradient(180deg, rgba(237,38,87,1) 0%, rgba(254,185,0,1) 100%);
-    border-radius: 4vw ;
-    padding: 1vh;
-    margin: 5vh;
+.blocSection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-width: 90vw;
+  min-height: 60vh;
+  background: rgb(237, 38, 87);
+  background: linear-gradient(
+    180deg,
+    rgba(237, 38, 87, 1) 0%,
+    rgba(254, 185, 0, 1) 100%
+  );
+  border-radius: 4vw;
+  padding: 1vh;
+  margin: 5vh;
 }
 
-.titleSection{
-    text-align: center;
-    color:#feffc3;
-    text-transform: uppercase;
-    font-weight: 700;
-    font-size: clamp(20px,6vw,50px);
+.titleSection {
+  text-align: center;
+  color: #feffc3;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: clamp(20px, 6vw, 50px);
 }
 
-.textSection{
-    text-align:center;
-    margin-left:auto;
-    margin-right:auto;
-    padding:1vh;
-    border-radius: 2vw;
-    font-weight: 500;  
-    width: 60vw;
-    background-color: #feffc3;
-    box-shadow: 5px 5px #350b59;
-    color:#350b59;
-    font-size: clamp(10px,4vw,25px);
-    
+.textSection {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 1vh;
+  border-radius: 2vw;
+  font-weight: 500;
+  width: 60vw;
+  background-color: #feffc3;
+  box-shadow: 5px 5px #350b59;
+  color: #350b59;
+  font-size: clamp(10px, 4vw, 25px);
 }
 
-.commuSection{
-    padding: 2vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 60vw;
-    margin-left:auto;
-    margin-right:auto;
-    color: #feffc3;
-    font-size: clamp(10px,4vw,25px);
-    text-transform: uppercase;
-    gap:2vh;
+.commuSection {
+  padding: 2vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60vw;
+  margin-left: auto;
+  margin-right: auto;
+  color: #feffc3;
+  font-size: clamp(10px, 4vw, 25px);
+  text-transform: uppercase;
+  gap: 2vh;
 }
 
-
-.imgMan{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 1vh;
-    border-radius: 2vw;
-    background-color: #feffc3;
-    box-shadow: 5px 5px #350b59;
-    width: 40%;
+.imgMan {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1vh;
+  border-radius: 2vw;
+  background-color: #feffc3;
+  box-shadow: 5px 5px #350b59;
+  width: 40%;
 }
 
-.textSection2{
-    text-align: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-transform: none;
+.textSection2 {
+  text-align: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: none;
 }
 
-.imgAvis{
-    border-radius: 10px;
-    width: 10vw;
-    margin: 1vh;
+.imgAvis {
+  border-radius: 10px;
+  width: 10vw;
+  margin: 1vh;
 }
 
-.avis{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-transform: none;
-    text-align: center;
-    background-color: #350b59;
-    border-radius: 10px;
-    padding: 1vh;
-    font-size: clamp(10px,2vw,25px);
+.avis {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-transform: none;
+  text-align: center;
+  background-color: #350b59;
+  border-radius: 10px;
+  padding: 1vh;
+  font-size: clamp(10px, 2vw, 25px);
 }
 
-.logAvis{
-    display: flex;
-    flex-direction: row;
+.logAvis {
+  display: flex;
+  flex-direction: row;
 }
 
-.button{
-display: flex;
-justify-content: center;
-align-items: center;    
-padding: 1vh;   
-border: 2px solid #350b59;;
-border-radius: 2vw;
-font-size: clamp(10px,2vw,25px);
-font-weight: 600;
-cursor: pointer;
-color: #350b59;
-margin: 1vh;
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1vh;
+  border: 2px solid #350b59;
+  border-radius: 2vw;
+  font-size: clamp(10px, 2vw, 25px);
+  font-weight: 600;
+  cursor: pointer;
+  color: #350b59;
+  margin: 1vh;
 }
 
-.button:hover{
-background-color: #feffc3;
-color: #350b59;
-
+.button:hover {
+  background-color: #feffc3;
+  color: #350b59;
 }
