--- a/src/components/testimonials/testimonials.css
+++ b/src/components/testimonials/testimonials.css
@@ -1,30 +1,28 @@
-.mainTT{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #feffc3;;
-    width: 100vw;
-    height: 20vh;
-    text-transform: uppercase;
-    color:#000;
+.mainTT {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #feffc3;
+  width: 100vw;
+  height: 20vh;
+  text-transform: uppercase;
+  color: #000;
 }
 
-.titleTT{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
+.titleTT {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
-.barAd{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 90vw;
-
+.barAd {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 90vw;
 }
 
-.logoAd{
-    width: 15vw;
+.logoAd {
+  width: 15vw;
 }
